--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<html>
-qingshan's blog
+<!DOCTYPE>
+<html lang="ZH-cn">
+<head>
+    <meta charset="utf-8" >
+    <title>小黄</title>
+    <meta name="keywords" content="小黄" /> 
+    <meta name="description" content="小黄" />
+</head>
+<body>
+    小黄
+</body>
 </html>
